fix CommentToggle Style on MobileView

--- a/sass/site/content/_single-post.scss
+++ b/sass/site/content/_single-post.scss
@@ -34,7 +34,7 @@
       padding: 0;
     }
 
-    .menu-toggle {
+    button {
       display: block;
       background: none;
       font-style: italic;
